[package]
name = "intname"
version = "0.1.0"
authors = ["Cabralski (Pedro Cabral)"]
description = "Full English name for any integer of any primitive integer type."
readme = "README.md"
repository = "https://github.com/cabralski/intname"
license-file = "Apache-2.0"
keywords = ["integer", "name", "text", "formatting"]
categories = ["text-processing"]
edition = "2018"

[dependencies]
num-traits = "0.2.14"